@@ -2,6 +2,8 @@ package biz.ugur.busroutebackend.advertising.domain.events;
 
 import lombok.Getter;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 @Getter
@@ -11,7 +13,7 @@ public class AdTariffUpdatedEvent extends AdvertisingDomainEvent {
 
     public AdTariffUpdatedEvent(String tariffId, Map<String, Object> changes) {
         super(tariffId);
-        this.changes = Map.copyOf(changes);
+        this.changes = Collections.unmodifiableMap(new HashMap<>(changes));
     }
 
     @Override protected int getCurrentVersion() { return 1; }
